# runtime

./: NuGet.config
eng/: Subsets.props  liveBuilds.targets
eng/pipelines/: runtime.yml
eng/pipelines/libraries/: .azure-ci.yml  base-job.yml  build-job.yml  build-test-job.yml
src/coreclr/: clr.featuredefines.props  clrdefinitions.cmake
src/coreclr/debug/ee/: funceval.cpp
src/coreclr/hosts/corerun/: corerun.cpp
src/coreclr/inc/: clrnt.h  crosscomp.h  regdisp.h
src/coreclr/jit/: codegenarm64.cpp  codegenarmarch.cpp  codegencommon.cpp  codegenlinear.cpp  codegenxarch.cpp  compiler.cpp  compiler.h  compiler.hpp  emit.cpp  emit.h  fgbasic.cpp  fgdiagnostic.cpp  fgehopt.cpp  fgopt.cpp  fgstmt.cpp  flowgraph.cpp  gcencode.cpp  gcinfo.cpp  gentree.cpp  gtlist.h  gtstructs.h  importer.cpp  jit.h  jiteh.cpp  jitgcinfo.h  lclvars.cpp  liveness.cpp  lower.cpp  lowerxarch.cpp  lsra.cpp  lsraxarch.cpp  morph.cpp  optimizer.cpp  regalloc.cpp  scopeinfo.cpp  stacklevelsetter.cpp  unwind.cpp  unwindx86.cpp  valuenum.cpp
src/coreclr/nativeaot/Bootstrap/: main.cpp
src/coreclr/nativeaot/BuildIntegration/: Microsoft.NETCore.Native.Unix.targets
src/coreclr/nativeaot/Runtime/: CMakeLists.txt  CommonMacros.inl  EHHelpers.cpp  ICodeManager.h  StackFrameIterator.cpp  ThunksMapping.cpp  gcbridge.cpp  gcbridge.h  gcenv.ee.cpp  thread.cpp  thread.h
src/coreclr/nativeaot/Runtime/Full/: CMakeLists.txt
src/coreclr/nativeaot/Runtime/amd64/: ThunkPoolThunks.S
src/coreclr/nativeaot/Runtime/arm64/: ThunkPoolThunks.S
src/coreclr/nativeaot/Runtime/i386/: AsmOffsetsCpu.h  MiscStubs.asm
src/coreclr/nativeaot/Runtime/inc/: MethodTable.h
src/coreclr/nativeaot/Runtime/unix/: PalRedhawkUnix.cpp  UnixNativeCodeManager.cpp  UnixNativeCodeManager.h
src/coreclr/nativeaot/Runtime/windows/: CoffNativeCodeManager.cpp  CoffNativeCodeManager.h  PalRedhawkMinWin.cpp
src/coreclr/tools/Common/JitInterface/: CorInfoImpl.cs
src/coreclr/tools/aot/ILCompiler/: ILCompiler.csproj
src/coreclr/tools/aot/ILCompiler.Compiler/: ILCompiler.Compiler.csproj
src/coreclr/vm/: excep.cpp  excep.h  exceptionhandling.cpp  gcenv.ee.common.cpp  stackwalk.cpp  threads.cpp  threadsuspend.cpp
src/coreclr/vm/amd64/: Context.S  Context.asm
src/coreclr/vm/i386/: asmhelpers.asm  excepx86.cpp
src/libraries/Native/: build-native.sh
src/libraries/Native/Unix/: CMakeLists.txt
src/libraries/Native/Unix/System.Security.Cryptography.Native/: entrypoints.c  opensslshim.h  pal_evp.c  pal_evp.h  pal_evp_cipher.c  pal_evp_cipher.h
src/libraries/Native/Unix/System.Security.Cryptography.Native.Android/: pal_cipher.c  pal_cipher.h  pal_evp.c  pal_evp.h
src/libraries/Native/Unix/System.Security.Cryptography.Native.Apple/: CMakeLists.txt  entrypoints.c  extra_libs.cmake  pal_aead.h  pal_aead.swift  pal_digest.c  pal_digest.h  pal_dsa.c  pal_dsa.h  pal_keyservices.c  pal_keyservices.h  pal_seckey.c  pal_seckey.h  pal_signverify.c  pal_signverify.h  pal_symmetric.c  pal_symmetric.h  pal_x509.c
src/libraries/System.Net.HttpListener/src/: System.Net.HttpListener.csproj
src/libraries/System.Net.Mail/src/: System.Net.Mail.csproj
src/libraries/System.Net.Security/ref/: System.Net.Security.cs
src/libraries/System.Net.Security/src/: System.Net.Security.csproj
src/libraries/System.Security.Cryptography.Algorithms/src/: System.Security.Cryptography.Algorithms.csproj
src/libraries/System.Security.Cryptography.Algorithms/tests/: AesCcmTests.cs  AesGcmTests.cs  CryptoConfigTests.cs  DSACreateTests.cs  IncrementalHashTests.cs  RC4Tests.cs  System.Security.Cryptography.Algorithms.Tests.csproj
src/libraries/System.Security.Cryptography.Cng/src/: System.Security.Cryptography.Cng.csproj
src/libraries/System.Security.Cryptography.Csp/src/: System.Security.Cryptography.Csp.csproj
src/libraries/System.Security.Cryptography.X509Certificates/src/: System.Security.Cryptography.X509Certificates.csproj
src/libraries/System.Security.Cryptography.X509Certificates/tests/: System.Security.Cryptography.X509Certificates.Tests.csproj
src/mono/mono/metadata/: handle.h  sgen-bridge-internals.h  sgen-mono.c  sgen-tarjan-bridge.c
src/mono/tests/GCBridge/: GCBridge.vcxproj  build.bat  config.h  eglib-config.h  gc-bridge-impl.c  main.c  objtypes.h  sgen-bridge-types.h
src/native/libs/System.Net.Security.Native/: entrypoints.c  pal_gssapi.c  pal_gssapi.h
src/tests/: Directory.Build.props  Directory.Build.targets
src/tests/Common/: Directory.Build.targets
src/tests/Common/XUnitWrapperGenerator/: XUnitWrapperGenerator.csproj
(+109 files in other folders)
